# MultiUAVSim_Qt

./: CMakeLists.txt  OptionWidget.qml  README.md  main.cpp  main.qml  multiuavsimqmlglobal.cpp  multiuavsimqmlglobal.h  qml.qrc  settingsmanage.cpp  settingsmanage.h
